@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-28T08:10:37Z",
+  "timestamp" : "2023-10-28T16:10:28Z",
   "count_outdated" : 1416,
   "uniques_outdated" : 768,
-  "count" : 1445,
+  "count" : 1446,
   "uniques" : 785,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
