@@ -1,5 +1,5 @@
 {
-  "count": 28,
+  "count": 29,
   "uniques": 3,
   "clones": [
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-10-28T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
