@@ -1,3 +1,12 @@
+2023-10-28T16:10:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6677936868 # 2032
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-28
+* notice: last 14d: unq all: 3 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 768 1416 / 785 1445
+* notice: next accum: outdated-unq outdated-all / unq all: 768 1416 / 785 1446
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-10-28]
+
 2023-10-28T08:10:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6675748444 # 2031
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-28
